--- a/boxmodel/css/layout.css
+++ b/boxmodel/css/layout.css
@@ -26,5 +26,27 @@ main{
 }
 section{
     width: 100%;
+    height: 300px;
+    border: 1px solid;
     
+}
+.row{
+    width: 90%;
+    height: inherit;
+margin: auto;
+    background-color: brown;
+    display: flex;
+justify-content: space-evenly;
+align-items: center;
+}
+.col{
+    width: 20%;
+    height: 200px;
+    border: 2px solid;
+}
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: blueviolet;
+}
 }
