--- a/boxmodel/css/layout.css
+++ b/boxmodel/css/layout.css
@@ -1,30 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-header{
+
+header {
     width: 100%;
     height: 70px;
     border: 1px solid;
-    display:flex;
+    display: flex;
 }
-.logo{
+
+.logo {
     width: 10%;
     height: inherit;
-    background-color: lightcoral;
+    background-color: rgb(161, 47, 66);
 }
-nav{
+
+nav {
     width: 90%;
     height: inherit;
-    background-color: burlywood;
+    background-color: rgb(200, 53, 0);
 }
-main{
+
+main {
     width: 100%;
     height: inherit;
-    background-color: bisque;
+    background-color: blue;
 }
-section{
+
+section {
     width: 100%;
-    
+    height: 600px;
+    border: 1px solid;
+}
+
+.row {
+    width: 90%;
+    height: inherit;
+    margin: auto;
+    background-color: rgb(108, 0, 0);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.col {
+    width: 20%;
+    height: 200px;
+    border: 2px solid;
+}
+
+footer {
+    width: 100%;
+    height: 67px;
+    background-color: brown;
 }
